--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-name: Test
+name: Tests
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -11,10 +11,10 @@ jobs:
           fetch-depth: 2
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.17'
+          go-version: '1.19'
       - name: Run linter
         run: make ci-lint
       - name: Run coverage
-        run: go test -cover -coverprofile=coverage.txt -count=10 -short
+        run: go test -cover -coverprofile=coverage.txt -count=3 -short
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
